--- a/index.html
+++ b/index.html
@@ -128,30 +128,18 @@
 
 <!-- Why Choose Us Section -->
 <section class="why-choose-us">
-    <h2>Why You Choose Us?</h2>
-    <img src="doctor and patient.webp" alt="doctor and patient 2.avif">
+   <div class="image-container">
+        <img src="doctor and patient.webp" alt="doctor and patient 2.avif">
+    </div>    
     <div class="reasons">
-        <div class="reason">
-            <span class="icon">✔️</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="reason">
-            <span class="icon">✔️</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="reason">
-            <span class="icon">✔️</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="reason">
-            <span class="icon">✔️</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-        <div class="reason">
-            <span class="icon">✔️</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-    </div>
+        <h2>Why Choose Us</h2>
+        <ul>
+            <li>✔️high quality services</li>
+            <li>✔️Experienced professonals</li>
+            <li>✔️Affordable pricing</li>
+            <li>✔️Excellent patient support</li>
+        </ul>
+    </div>    
     <a href="#" class="learn-more-btn">Learn More</a>
 </section>
 
