--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
     <!-- Testimonials Section -->
 <section class="testimonials">
     <h2>What Our Members Are Saying About Us</h2>
+    <div class="review-avatars">
+        <image src="myavatar1.jpg" alt="Jane Cooper">
+        <image src="myavatar2.jpg" alt="ASHLEY JEPCHIRCHIR"> 
+        <image src="myavatar3.jpg" alt="VINCENT">
+        <image src="myavatar4.jpg" alt="ALLAN">         
+    </div>
     <div class="testimonial-cards">
         <div class="testimonial-card">
             <div class="avatar">
