--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h1>Find & Search your <span>favorite doctor</span></h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
             <form>
-                <div class="search-box">Location</div>
+                <div class="search-box"></div>
                     <input type="text" placeholder="Location">
                         <select id="country">
                         <optgroup label="Africa">
