--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <a href="#" class="learn-more-btn">Learn More</a>
         </div>
         <div class="image-content">
-             <img src="another1.jpg" alt="another1.jpg">
+             <img src="futurehealth.jpg" alt="futurehealth.jpg">
         </div>     
      </section>
     <div class="newsletter">
