--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <h1>Find & Search your <span>favorite doctor</span></h1>
+            <h1>Find & Search your <span>favorite </span>Doctor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
             <form>
                 <div class="search-box"></div>
@@ -75,12 +75,12 @@
                 </form>
             </div>
                 <div class="stats">
-                    <div>24/7<br>Online Support</div>
-                    <div>100+<br>Doctors</div>
-                    <div>1M+<br>Patients</div>
+                    <div><strong>24/7</strong><br>Online Support</div>
+                    <div><strong>100+</strong><br>Doctors</div>
+                    <div><strong>1M+</strong><br>Active Patients</div>
                 </div>
         </div>
-        <img src="doctor and patient 2.avif" alt="doctor and patient 2.avif">
+        <img src="mydoctor.jpg" alt="doctor">
     </header>
 
     <section class="services">
