--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Ash-Care</div>
-            <ul class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Application</a></li>
-                <li><a href="#">History</a></li>
-                <li><a href="#">Log in</a></li>
-                <li><a href="#" class="signup-btn">Sign up</a></li>
-            </ul>
+            <div class="logo">Ash-<span class="blue-text">Care</span></div>
+                <ul class="nav-links">
+                     <li><a href="#">Home</a></li>
+                     <li><a href="#">About</a></li>
+                     <li><a href="#">Application</a></li>
+                     <li><a href="#">History</a></li>
+                     <li><a href="#">Log in</a></li>
+                     <li><a href="#" class="signup-btn">Sign up</a></li>
+                 </ul>
         </nav>
         <div class="hero">
             <h1>Find & Search your <span>favorite </span>Doctor</h1>
@@ -80,8 +80,10 @@
                     <div><strong>1M+</strong><br>Active Patients</div>
                 </div>
         </div>
-        <img src="mydoctor.jpg" alt="doctor">
-    </header>
+               <div>
+                   <img src="mydoctor.jpg" alt="doctor">
+               </div>    
+     </header>
 
     <section class="services">
         <h2>Our Consulting Specialists</h2>
